<resources>
    <string name="app_name">果耽</string>
    <string name="title_collect">收藏</string>
    <string name="title_home">首页</string>
    <string name="title_my">我的</string>


    <string name="network_no_connect">当前网络繁忙，请稍后再试</string>
    <string name="home_search_hint">漫画、小说、作者名</string>
    <string name="home_nav_classify">分类</string>
    <string name="home_nav_ranking">排名</string>
    <string name="home_nav_boy">男孩</string>
    <string name="home_nav_girl">女孩</string>
    <string name="home_item_more">查看更多</string>
    <string name="home_item_replace">换一批</string>
    <string name="home_item_1_tile">每周火爆新作</string>
    <string name="home_item_2_tile">宅男爆款 . 每日更新</string>
    <string name="home_item_3_tile">腐女爆款 . 每日更新</string>
    <string name="home_item_4_tile">宅男新漫</string>
    <string name="home_item_5_tile">言情新漫</string>

    <string name="home_classify_tab_type">类型</string>
    <string name="home_classify_tab_whole">全部</string>
    <string name="home_classify_tab_universal">通用</string>
    <string name="home_classify_tab_boy">男生</string>
    <string name="home_classify_tab_girl">女生</string>
    <string name="home_classify_tab_status">状态</string>
    <string name="home_classify_tab_over">完结</string>
    <string name="home_classify_tab_serialization">连载</string>

    <string name="data_list_error_retry">数据加载异常，请重试</string>
    <string name="data_list_no_more_data">已全部加在完毕</string>

    <string name="home_ranking_label_1">女生榜</string>
    <string name="home_ranking_label_2">男生榜</string>
    <string name="home_ranking_label_3">新作榜</string>
    <string name="home_ranking_label_4">完结榜</string>
    <string name="home_ranking_label_5">评分榜</string>

    <string name="search">搜索</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="search_history">最近在搜</string>

    <string name="detail_score_num_less_50">不足50人评价</string>
    <string name="detail_score_num">%d人评价</string>
    <string name="detail_status_serialization">连载中</string>
    <string name="detail_status_over">已完结</string>
    <string name="detail_more_serialization">更新到%d章></string>
    <string name="detail_more_over">查看全部章节</string>
    <string name="detail_author">作者：%s</string>
    <string name="detail_comment">评论</string>
    <string name="detail_start_read">开始阅读 第%d章</string>
    <string name="detail_collect">收藏</string>
    <string name="detail_collect_suc">收藏成功</string>
    <string name="detail_collect_cancel_title">确定要取消收藏吗？</string>
    <string name="detail_collect_cancel">残忍抛弃</string>
    <string name="detail_collect_confirm">继续收藏</string>
    <string name="detail_comment_number">共%d条回复</string>
    <string name="detail_collect_cancel_suc">收藏已取消</string>

    <string name="reading_collect_cancel">取消收藏</string>
    <string name="reading_comment_send">发表</string>
    <string name="reading_comment_hint">发表您牛逼哄哄的言论吐槽</string>
    <string name="reading_previous">上一章</string>
    <string name="reading_next">下一章</string>
    <string name="reading_chapter">第%d章</string>
    <string name="reading_no_more_previous_one">当前已是第一章</string>
    <string name="reading_no_more_next_one">当前已是最后一章</string>

    <string name="login_first">请先登录</string>

    <string name="comment_detail_title">评论详情</string>
    <string name="comment_write_hint">写下您牛气哄哄的评论吧（250字内）</string>
    <string name="comment_write_title">写评论</string>
    <string name="comment_write_publish">发布</string>
    <string name="comment_write_publish_suc">发布成功</string>
    <string name="comment_write_publish_fail">发布失败</string>

    <string name="chapter_directory_title">本书目录</string>
    <string name="chapter_more_serialization">更新到%d章</string>
    <string name="chapter_directory_free_reading">免费阅读</string>
    <string name="sort_up">升序</string>
    <string name="sort_down">降序</string>

    <string name="collect_last_reading">上次看到：</string>
    <string name="collect_last_reading_content">"第%d章%s"</string>
    <string name="collect_latest">更新至：</string>
    <string name="collect_latest_content">第%d章</string>
    <string name="collect_continue_reading">继续阅读</string>
    <string name="collect_chapter_loading">有新章节</string>
    <string name="collect_chapter_over">更新完毕</string>

    <string name="collect_empty">亲，您的收藏为空</string>
    <string name="collect_title">我的收藏</string>

    <string name="my_brown">浏览记录</string>
    <string name="my_about_us">关于我们</string>
    <string name="my_privacy">隐私政策</string>
    <string name="my_feedback">意见反馈</string>
    <string name="my_version">版本更新</string>
    <string name="my_login">点击登录</string>

    <string name="login_phone">请输入手机号码</string>
    <string name="login_code">请输入验证码</string>
    <string name="login_get_code">获取验证码</string>
    <string name="login_agree">阅读并同意《用户协议》和《隐私协议》</string>
    <string name="login_agree_key1">《用户协议》</string>
    <string name="login_agree_key2">《隐私协议》</string>
    <string name="login_agree_title_user_protocol">用户协议</string>
    <string name="login_agree_title_privacy">隐私协议</string>
    <string name="login">登录</string>
    <string name="login_out">退出</string>
    <string name="login_other">其他登录</string>

    <string name="network_error">网络异常，请稍后重试</string>
    <string name="code_id_error">验证码错误，请稍后重试</string>

    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unsupported">不支持错误</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="login_wx_null">请先安装微信</string>
    <string name="login_wx_fail">微信授权登录失败</string>
    <string name="login_phone_empty">请先输入手机号码</string>
    <string name="login_phone_verification_empty">请先输入验证码</string>

    <string name="login_binding_sex_text_1">欢迎来到“果耽”</string>
    <string name="login_binding_sex_text_2">很高兴认识你，快选择你的性别吧</string>
    <string name="sex_male">男</string>
    <string name="sex_female">女</string>
    <string name="sex_unknown">不告诉你</string>

    <string name="setting_cache">清除缓存</string>
    <string name="setting_cache_suc">清除完成</string>
    <string name="setting_young">青少年模式</string>
    <string name="setting_young_not_start">未开启</string>
    <string name="setting_young_enter">开启青少年模式</string>
    <string name="setting_young_secret">设置密码</string>
    <string name="setting_young_secret_confirm">确认密码</string>
    <string name="setting_young_secret_different">两次密码不一致</string>
    <string name="setting_young_secret_hint">启动青少年模式，需先独立设置密码</string>
    <string name="setting_young_next">下一步</string>
    <string name="setting_account_cancel">账号注销</string>
    <string name="setting_title">设置</string>
    <string name="setting_login_out_title">提示</string>
    <string name="setting_login_out_msg">您确定要退出登录吗？</string>
    <string name="setting_account_cancel_title">是否确认注销此账号</string>
    <string name="setting_account_cancel_msg">注销后将清除所有数据</string>

    <string name="young_recommend">推荐</string>
    <string name="young_exit">退出青少年模式</string>
    <string name="young_detail">文章详情</string>
    <string name="young_exit_secret">关闭青少年模式</string>
    <string name="young_exit_secret_hint">请输入密码确认</string>
    <string name="young_exit_secret_error">密码错误</string>

    <string name="person_title">个人信息</string>
    <string name="person_header">头像</string>
    <string name="person_account">账号</string>
    <string name="person_nick_name">昵称</string>
    <string name="person_sex">性别</string>
    <string name="person_birthdate">生日</string>
    <string name="person_account_bind">账号绑定</string>
    <string name="person_unset">未设置</string>
    <string name="person_nick_name_write_hint">写下您高贵的昵称吧</string>
    <string name="person_nick_name_publish_suc">修改成功</string>
    <string name="person_nick_name_publish_fail">修改失败</string>
    <string name="person_account_phone">手机号</string>
    <string name="person_account_wx">微信</string>
    <string name="person_account_wx_go_bind">去绑定</string>
    <string name="person_account_wx_bind">已绑定</string>

    <string name="share">分享到</string>
    <string name="share_friend_circle">朋友圈</string>
    <string name="share_qq">QQ</string>
    <string name="share_copy">复制链接</string>
    <string name="copy_suc">复制成功</string>
    <string name="share_fail">分享失败</string>
    <string name="share_suc">分享成功</string>
    <string name="reading_share">分享</string>

    <string name="url_privacy">"https://www.baidu.com"</string>
    <string name="url_user_protocol">"https://www.baidu.com"</string>
    <string name="url_about_us">"https://www.baidu.com"</string>
    <string name="url_feedback">"https://www.baidu.com"</string>

</resources>