<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

   <TextView
       android:id="@+id/tv_1"
       style="@style/TvStyle"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintVertical_bias = "0.2"
       android:textSize="27sp"
       android:text="@string/login_binding_sex_text_1"/>

   <TextView
       android:id="@+id/tv_2"
       style="@style/TvStyle"
       app:layout_constraintTop_toBottomOf="@id/tv_1"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       android:layout_marginTop="6dp"
       android:textSize="14sp"
       android:textColor="#FF949494"
       android:text="@string/login_binding_sex_text_2"/>

   <ImageView
       android:id="@+id/img_boy"
       android:layout_width="96dp"
       android:layout_height="96dp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toStartOf="@id/img_girl"
       app:layout_constraintTop_toBottomOf="@id/tv_2"
       app:layout_constraintHorizontal_chainStyle="packed"
       android:layout_marginEnd="42dp"
       android:layout_marginTop="59dp"
       android:src="@mipmap/male"/>

   <ImageView
       android:id="@+id/img_girl"
       android:layout_width="96dp"
       android:layout_height="96dp"
       app:layout_constraintStart_toEndOf="@id/img_boy"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toTopOf="@id/img_boy"
       android:src="@mipmap/female"/>

   <TextView
       style="@style/TvStyle"
       app:layout_constraintStart_toStartOf="@id/img_boy"
       app:layout_constraintEnd_toEndOf="@id/img_boy"
       app:layout_constraintTop_toBottomOf="@id/img_boy"
       android:layout_marginTop="9dp"
       android:textSize="17sp"
       android:text="@string/sex_male"/>

   <TextView
       style="@style/TvStyle"
       app:layout_constraintStart_toStartOf="@id/img_girl"
       app:layout_constraintEnd_toEndOf="@id/img_girl"
       app:layout_constraintTop_toBottomOf="@id/img_girl"
       android:layout_marginTop="9dp"
       android:textSize="17sp"
       android:text="@string/sex_female"/>


   <TextView
       android:id="@+id/tv_unknown"
       android:layout_width="190dp"
       android:layout_height="44dp"
       app:layout_constraintTop_toBottomOf="@id/img_boy"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       android:layout_marginTop="81dp"
       android:gravity="center"
       android:textColor="@color/bing_sex_text_color_selector"
       android:background="@drawable/binding_sex_selector"
       android:text="@string/sex_unknown"/>


</androidx.constraintlayout.widget.ConstraintLayout>