<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/status_bar_height"
    android:background="@color/white">


    <include
        android:id="@+id/title"
        layout="@layout/level_2_lay_title"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_nav"
        android:layout_width="106dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/home_classify_nav_bg_col"
        android:overScrollMode="never"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_type"
        android:layout_width="0dp"
        android:layout_height="23dp"
        app:layout_constraintStart_toEndOf="@id/rcv_nav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/rcv_nav"
        android:layout_marginTop="8dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="24dp">
        <TextView
            android:id="@+id/tv_tab_type"
            style="@style/classify_tab"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_tab_whole"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            android:clickable="false"
            android:text="@string/home_classify_tab_type"/>

        <TextView
            android:id="@+id/tv_tab_whole"
            style="@style/classify_tab"
            app:layout_constraintStart_toEndOf="@id/tv_tab_type"
            app:layout_constraintEnd_toStartOf="@id/tv_tab_universal"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/home_classify_tab_whole"/>

        <TextView
            android:id="@+id/tv_tab_universal"
            style="@style/classify_tab"
            app:layout_constraintStart_toEndOf="@id/tv_tab_whole"
            app:layout_constraintEnd_toStartOf="@id/tv_tab_boy"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/home_classify_tab_universal"/>

        <TextView
            android:id="@+id/tv_tab_boy"
            style="@style/classify_tab"
            app:layout_constraintStart_toEndOf="@id/tv_tab_universal"
            app:layout_constraintEnd_toStartOf="@id/tv_tab_girl"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/home_classify_tab_boy"/>

        <TextView
            android:id="@+id/tv_tab_girl"
            style="@style/classify_tab"
            app:layout_constraintStart_toEndOf="@id/tv_tab_boy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/home_classify_tab_girl"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="23dp"
        app:layout_constraintStart_toEndOf="@id/rcv_nav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_type"
        android:layout_marginTop="8dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="24dp">
        <TextView
            android:id="@+id/tv_tab_status"
            style="@style/classify_tab"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_tab_status_whole"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            android:clickable="false"
            android:text="@string/home_classify_tab_status"/>

        <TextView
            android:id="@+id/tv_tab_status_whole"
            style="@style/classify_tab"
            app:layout_constraintStart_toEndOf="@id/tv_tab_status"
            app:layout_constraintEnd_toStartOf="@id/tv_tab_serialization"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/home_classify_tab_whole"/>

        <TextView
            android:id="@+id/tv_tab_serialization"
            style="@style/classify_tab"
            app:layout_constraintStart_toEndOf="@id/tv_tab_status_whole"
            app:layout_constraintEnd_toStartOf="@id/tv_tab_status_over"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/home_classify_tab_serialization"/>

        <TextView
            android:id="@+id/tv_tab_status_over"
            style="@style/classify_tab"
            app:layout_constraintStart_toEndOf="@id/tv_tab_serialization"
            app:layout_constraintEnd_toStartOf="@id/tv_tab_empty"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/home_classify_tab_over"/>

        <TextView
            android:id="@+id/tv_tab_empty"
            style="@style/classify_tab"
            app:layout_constraintStart_toEndOf="@id/tv_tab_status_over"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/home_classify_tab_girl"
            android:visibility="invisible"/>
    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>