<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="259dp"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_8_fcfcfc"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="17sp"
        android:textColor="@color/main_text_col"
        android:layout_marginTop="23dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="13dp"
        android:text="@string/setting_account_cancel_title"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">
        
        <ImageView
            android:layout_width="18dp"
            android:layout_height="17dp"
            android:src="@mipmap/warn"/>

        <TextView
            android:id="@+id/tv_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="13sp"
            android:textColor="#FF505050"
            android:gravity="center"
            android:text="@string/setting_account_cancel_msg"
            android:visibility="visible"/>

    </LinearLayout>



    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="22dp"
        android:background="@color/home_classify_content_item_divider_line_col"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_left"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/confirm"
            android:textSize="16sp"
            android:gravity="center"
            android:text="@string/confirm"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/home_classify_content_item_divider_line_col"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/tv_right"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/main_color_pink"
            android:textSize="16sp"
            android:gravity="center"
            android:text="@string/cancel"/>

    </LinearLayout>

</LinearLayout>

</RelativeLayout>