<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/bg_22_top_white">

        <TextView
            android:id="@+id/tv_share"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/main_text_col"
            android:textSize="12sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/share"/>

        <ImageView
            android:id="@+id/img_wechat"
            android:layout_width="34dp"
            android:layout_height="34dp"
            app:layout_constraintTop_toBottomOf="@id/tv_share"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/img_friend_circle"
            android:layout_marginTop="6dp"
            android:layout_marginStart="25dp"
            android:src="@mipmap/icon_wechat"
            app:layout_constraintHorizontal_chainStyle="spread_inside"/>

        <ImageView
            android:id="@+id/img_friend_circle"
            android:layout_width="34dp"
            android:layout_height="34dp"
            app:layout_constraintTop_toBottomOf="@id/tv_share"
            app:layout_constraintStart_toEndOf="@id/img_wechat"
            app:layout_constraintEnd_toStartOf="@id/img_qq"
            android:layout_marginTop="6dp"
            android:src="@mipmap/detail_icon_pyq"
            app:layout_constraintHorizontal_chainStyle="spread_inside"/>


        <ImageView
            android:id="@+id/img_qq"
            android:layout_width="34dp"
            android:layout_height="34dp"
            app:layout_constraintTop_toBottomOf="@id/tv_share"
            app:layout_constraintStart_toEndOf="@id/img_friend_circle"
            app:layout_constraintEnd_toStartOf="@id/img_copy"
            android:layout_marginTop="6dp"
            android:src="@mipmap/detail_icon_qq"
            app:layout_constraintHorizontal_chainStyle="spread_inside"/>

        <ImageView
            android:id="@+id/img_copy"
            android:layout_width="34dp"
            android:layout_height="34dp"
            app:layout_constraintTop_toBottomOf="@id/tv_share"
            app:layout_constraintStart_toEndOf="@id/img_qq"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="25dp"
            android:src="@mipmap/detail_icon_link"
            app:layout_constraintHorizontal_chainStyle="spread_inside"/>
        
        <TextView
            style="@style/TvStyle"
            app:layout_constraintTop_toBottomOf="@id/img_wechat"
            app:layout_constraintStart_toStartOf="@id/img_wechat"
            app:layout_constraintEnd_toEndOf="@id/img_wechat"
            android:layout_marginTop="5dp"
            android:textSize="12sp"
            android:text="@string/person_account_wx"/>

        <TextView
            style="@style/TvStyle"
            app:layout_constraintTop_toBottomOf="@id/img_friend_circle"
            app:layout_constraintStart_toStartOf="@id/img_friend_circle"
            app:layout_constraintEnd_toEndOf="@id/img_friend_circle"
            android:layout_marginTop="5dp"
            android:textSize="12sp"
            android:text="@string/share_friend_circle"/>

        <TextView
            style="@style/TvStyle"
            app:layout_constraintTop_toBottomOf="@id/img_qq"
            app:layout_constraintStart_toStartOf="@id/img_qq"
            app:layout_constraintEnd_toEndOf="@id/img_qq"
            android:layout_marginTop="5dp"
            android:textSize="12sp"
            android:text="@string/share_qq"/>

        <TextView
            style="@style/TvStyle"
            app:layout_constraintTop_toBottomOf="@id/img_copy"
            app:layout_constraintStart_toStartOf="@id/img_copy"
            app:layout_constraintEnd_toEndOf="@id/img_copy"
            android:layout_marginTop="5dp"
            android:textSize="12sp"
            android:text="@string/share_copy"/>


        <View
            android:id="@+id/v_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/img_wechat"
            android:layout_marginTop="31dp"
            android:background="@color/home_classify_content_item_divider_line_col"/>

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            app:layout_constraintTop_toBottomOf="@id/v_line"
            android:textColor="#FF626262"
            android:textSize="16sp"
            android:gravity="center"
            android:text="@string/cancel"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
