<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingEnd="15dp"
    android:paddingStart="15dp">

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/img_cover"
        android:layout_width="110dp"
        android:layout_height="128dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:round="8dp"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/img_cover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/img_cover"
        android:layout_marginStart="12dp"
        android:gravity="start"
        android:textSize="13sp"
        android:textColor="@color/main_text_col"
        android:text="title"
        android:maxLines="1"/>

    <LinearLayout
        android:id="@+id/ll_last_reading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tv_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:textColor="@color/home_classify_content_item_content_col"
            android:text="@string/collect_last_reading"/>

        <TextView
            android:id="@+id/tv_last_reading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:textColor="@color/main_text_col"
            android:text="@string/collect_last_reading_content"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_latest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tv_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_last_reading"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:textColor="@color/home_classify_content_item_content_col"
            android:text="@string/collect_latest"/>

        <TextView
            android:id="@+id/tv_latest_chapter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:textColor="@color/main_text_col"
            android:text="@string/collect_latest_content"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tv_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_latest"
        android:layout_marginTop="8dp"
        android:gravity="start"
        android:textSize="10sp"
        android:textColor="@color/collect_item_status_text_color_selector"
        android:text="status"
        android:ellipsize="end"
        android:maxLines="3"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="9dp"
        android:paddingStart="11dp"
        android:paddingEnd="11dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:background="@drawable/bg_13_pink"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:text="@string/collect_continue_reading"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/img_cover"
        android:layout_marginTop="8dp"
        android:background="@color/home_classify_content_item_divider_line_col"/>



</androidx.constraintlayout.widget.ConstraintLayout>