<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingTop="@dimen/status_bar_height"
    tools:context=".my.ui.fragment.NoLoginFragment" >

    <include
        android:id="@+id/title"
        layout="@layout/level_2_lay_title"/>

    <View
        android:id="@+id/line_top"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:background="#E6E6E6"/>

    <TextView
        android:id="@+id/tv_secret"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/line_top"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="27sp"
        android:textColor="@color/main_text_col"
        android:text="@string/setting_young_secret"/>


    <TextView
        android:id="@+id/tv_secret_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_secret"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="15dp"
        android:layout_marginTop="6dp"
        android:textSize="14sp"
        android:textColor="@color/setting_young_not_start"
        android:text="@string/setting_young_secret_hint"/>


    <com.maning.pswedittextlibrary.MNPasswordEditText
        android:id="@+id/edt_secret"
        android:layout_width="262dp"
        android:layout_height="55dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_secret_hint"
        android:layout_marginTop="29dp"
        android:focusableInTouchMode="true"
        android:inputType="number"
        android:maxLength="4"
        android:textSize="20sp"
        app:psw_border_color="#FFEEEEEE"
        app:psw_background_color="#FFEEEEEE"
        app:psw_border_radius="8dp"
        app:psw_border_selected_color="@color/main_color_pink"
        app:psw_border_width="1dp"
        app:psw_cover_circle_color="@color/main_color_pink"
        app:psw_cursor_width="1dp"
        app:psw_item_margin="14dp"
        app:psw_mode="Circle"
        app:psw_cover_circle_radius= "10dp"
        app:psw_show_cursor="true"
        app:psw_style="StyleOneself"
        app:psw_text_color="@color/main_text_col" />


    <TextView
        android:id="@+id/tv_next"
        style="@style/BtnStyle"
        app:layout_constraintTop_toBottomOf="@id/edt_secret"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="36dp"
        android:text="@string/setting_young_next"/>
</androidx.constraintlayout.widget.ConstraintLayout>